--- a/Sources/RxSwiftDebugger/index.html
+++ b/Sources/RxSwiftDebugger/index.html
@@ -7,6 +7,9 @@
   <title>Timeline | Manipulation example</title>
 
   <style>
+	  body {
+		  font-family: Arial;
+	  }
     .vis-item-content {font-size:11px;}
 
     .vis-item.eventGroup0 {
